# sit

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  blur_benchmarks.cpp
nix/: package.nix  shell.nix
src/: CMakeLists.txt  image.cpp  image.h  main.cpp
tests/: CMakeLists.txt  image.cpp
